<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".ui.login.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="fill_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="24dp"
        app:menu="@menu/book_shelf"
        app:title="@null"
        tools:ignore="MissingConstraints">

    </androidx.appcompat.widget.Toolbar>


    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@id/tool_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:autofillHints=""
        android:inputType="textPassword"
        android:layout_marginTop="15dp"

        app:layout_constraintTop_toBottomOf="@id/editTextTextPersonName"
        app:layout_constraintLeft_toLeftOf="@id/editTextTextPersonName"
        app:layout_constraintRight_toRightOf="@id/editTextTextPersonName"

        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:button="@drawable/checkbox_selector"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/i_am_agree"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/service_protocol"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/and"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/privacy_agreement"
            android:textSize="10sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="395dp"
        android:layout_height="51dp"
        android:text="Button"
        android:layout_marginTop="15dp"

        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/forget_password"
        app:layout_constraintTop_toBottomOf="@+id/submit"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_account"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/submit"
        app:layout_constraintRight_toRightOf="parent"

        />


    <ImageButton
        android:id="@+id/btn_qq"
        android:layout_width="58dp"
        android:layout_height="58dp"

        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/btn_wx"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginRight="48dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_qq"
        app:layout_constraintRight_toLeftOf="@id/btn_qq"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/btn_wb"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginLeft="48dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_qq"
        app:layout_constraintLeft_toRightOf="@id/btn_qq"
        tools:srcCompat="@tools:sample/avatars" />


</androidx.constraintlayout.widget.ConstraintLayout>