<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.book.BookFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <!-- 图片加书名 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/frag_book_cover"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:contentDescription="TODO"
                    android:src="@drawable/book_cover" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/frag_book_name"
                        android:layout_width="match_parent"
                        android:layout_height="26sp"
                        android:text="" />

                    <TextView
                        android:id="@+id/frag_book_author"
                        android:layout_width="match_parent"
                        android:layout_height="18sp"
                        android:text="" />

                    <TextView
                        android:id="@+id/frag_book_category_status"
                        android:layout_width="match_parent"
                        android:layout_height="18dp"
                        android:text="" />
                </LinearLayout>


            </LinearLayout>

            <!-- 统计 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/frag_book_read_count"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:gravity="center_horizontal"
                        android:text="" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:gravity="center_horizontal"
                        android:text="@string/read" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/frag_book_popular_count"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:gravity="center_horizontal"
                            android:text="" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:gravity="center_horizontal"
                            android:text="@string/popularity_values" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/frag_book_words_count"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:gravity="center_horizontal"
                            android:text="" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:gravity="center_horizontal"
                            android:text="@string/words_count" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <!-- 简介 -->
            <TextView
                android:id="@+id/frag_book_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="24dp" />

            <!-- 目录 -->
            <LinearLayout
                android:id="@+id/fg_book_detail_chapter"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="28dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/book_catalog" />

                <TextView
                    android:id="@+id/frag_book_last_chapter"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:ellipsize="end"
                    android:text="" />

                <TextView
                    android:id="@+id/frag_book_updated_date"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|end"
                    android:text="" />

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text=">" />


            </LinearLayout>

        </LinearLayout>



    </ScrollView>

</FrameLayout>